# fintech_ledger

./: .gitignore  README.html  README.md  db_analysis.ipynb  make_schema.sql  make_transactions.py  populate_db.py  pyproject.toml  update_exchange_rates.py
analysis/: db_analysis.ipynb
database/: make_schema.sql  populate_db.py
